--- a/KatherineRivera_estilos.css
+++ b/KatherineRivera_estilos.css
@@ -24,7 +24,7 @@ background-color: rgb(226, 223, 223);
     background-color: darkseagreen;
 }
 ul#nav li.active a {
-    color: dodgerblue;
+    color: rgb(6, 92, 179);
 }
 .articulo{
     font-style: italic;
