--- a/KatherineRivera_estilos.css
+++ b/KatherineRivera_estilos.css
@@ -8,24 +8,23 @@ h1{
     /* 1rem = 16 px */
 }
 h2{
-    font-size: 2rem;
+    font-size: 3rem;
 }
 h3{
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
-section{
-    background-color: cornsilk;
+
+}
+.seccion-vertical {
     padding: 2rem;
+    background-color: rgb(238, 238, 238);   
+    margin-top: 2rem;
 }
-.noticia-destacada h2 {
-background-color: rgb(226, 223, 223);
+.noticia {
+padding: 1rem;
+margin: 1rem;
+border-radius: 1rem;
+min-width: 40%;
+display: inline-block;
 }
-#este-articulo h2{
-    background-color: darkseagreen;
-}
-ul#nav li.active a {
-    color: rgb(6, 92, 179);
-}
-.articulo{
-    font-style: italic;
-}
+
