--- a/paquetes/packages.css
+++ b/paquetes/packages.css
@@ -1,8 +1,48 @@
-main{
+main {
     padding-top: 32px;
 }
 .package {
     width: 80%;
     margin: 16px 0;
-    border: 4px solid  rgb(250, 223, 165;
+    border: 4px solid  rgb(250, 223, 165);
+    border-left: none;
+}
+.package:hover,
+.package:active {
+    box-shadow: 2px 2px 4px;
+    border-color: coral ;
+}
+
+.package a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    padding: 32px;
+}
+
+.package__subtitle {
+   color: gray; 
+}
+
+.package__info{
+padding: 16px;
+border: 1 px solid  coral;
+font-size: 20px;
+color: rgb(85, 85, 85);
+background: white;
+}
+#plus  {
+    background-color: rgba(250, 223, 165, 0.219)
+}
+#gratis {
+background:  rgba(250, 223, 165, 0.863);
+}
+#premium{
+    background:  rgba(250, 223, 165, 0.445);
+    }
+#premium .package__title{
+ color: rgb(0, 0, 0);
+}
+#premium .package__subtitle{
+color: rgb(68, 68, 68);
 }
