--- a/paquetes/packages.css
+++ b/paquetes/packages.css
@@ -1,6 +1,14 @@
 main {
     padding-top: 32px;
 }
+
+.background {
+    background: url(../1920x1200-px-Andes-Caldera-clouds-Ecuador-grass-1077801-wallhere.com.jpg);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
 .package {
     width: 80%;
     margin: 16px 0;
