--- a/paquetes/packages.css
+++ b/paquetes/packages.css
@@ -15,7 +15,11 @@ main {
     margin: 16px 0;
     border: 4px solid  rgb(250, 223, 165);
     border-left: none;
+    position: relative;
 }
+
+
+
 .package:hover,
 .package:active {
     box-shadow: 2px 2px 4px;
@@ -30,6 +34,13 @@ main {
     padding: 32px;
 }
 
+
+.package__badge{
+    position: fixed;
+    top: 50px;
+    left: 400px;
+    margin: 20px; 
+}
 .package__subtitle {
    color: gray; 
 }
