--- a/mainc2.css
+++ b/mainc2.css
@@ -1,13 +1,13 @@
 
 
 #descripcion-del-producto { 
-    background: url("freedom.jpg");
+    background: url("fondoinicio.jpg");
     width: 100%;
     height:528px;
     padding: 10px;
  }
  .section-title {
-    color: salmon;
+    color: #175264;
     text-align: center;
 }
 #descripcion-del-producto h1 {  
@@ -23,7 +23,7 @@ text-align: center;
 
 
  .plan {
-     background: rgb(250, 223, 165);
+     background: #fdc93f;
      text-align: center;
      padding: 16px;
      margin: 8px;
@@ -32,7 +32,7 @@ text-align: center;
      vertical-align: middle;
  }
 .plan--highlighted{
-    background-color: coral;
+    background-color: #ee7043;
     color: white;
     box-shadow: 2px 2px 2px 2px rgb(192, 190, 190);
     border-radius: 7px;
@@ -40,18 +40,18 @@ text-align: center;
 
 .plan__annotation{
     background: white;
-    color: salmon;
+    color: #175264;
     padding: 8px;
     box-shadow: 2px 2px 2px 2px rgb(192, 190, 190) ;
     border-radius: 8px;
 }
 
 .plan__title {
-    color: sienna;
+    color: white;
 }
 
 .plan__price{
-    color: rgba(160, 81, 45, 0.63);    
+    color: #175264;    
 }
 
 .plan--highlighted .plan__title{
@@ -74,7 +74,7 @@ text-align: center;
 }
 
 #key-features {
-    background: salmon;
+    background: #175264;
     margin-top: 80px;
     padding: 60px;
 }
@@ -106,7 +106,7 @@ text-align: center;
 }
 
 .key-feature__image{
-    background: rgb(250, 223, 165);
+    background: #ee7043;
     width: 128px;
     height: 128px;
     border: 2px solid rgb(192, 190, 190);
