--- a/mainc2.css
+++ b/mainc2.css
@@ -1,10 +1,19 @@
 
 
 #descripcion-del-producto { 
-    background: url("fondoinicio.jpg");
+    background: url("fondoinicio.jpg") left 10% bottom 20%/cover no-repeat border-box padding-box;
+    /* background: url("fondoinicio.jpg");
+    background-size: cover;
+    background-position: left 10% bottom 20%; */
+    /*background-repeat: no-repeat;
+    background-origin: border-box;
+    background-clip: border-box;*/
     width: 100%;
     height:528px;
     padding: 10px;
+    margin-top: 43px;
+    /*border: 5px dashed #fdc93f; */
+    position: relative;
  }
  .section-title {
     color: #175264;
