--- a/paqueteShared.css
+++ b/paqueteShared.css
@@ -20,7 +20,15 @@ body {
      text-decoration: none;
      font-weight: 700;
      font-size: 22px;
+     height: 30px;
+     /*width: 20px;*/
+     display: inline-block;
      }
+.main-header_brand img {
+    height: 100%;
+    /*width: 100%;*/
+}
+
 .main-nav {
     display: inline-block;
     text-align: right;
