--- a/mainc2.css
+++ b/mainc2.css
@@ -1,16 +1,18 @@
 
 
 #descripcion-del-producto { 
-    background: url("fondoinicio.jpg") left 10% bottom 20%/cover no-repeat border-box padding-box;
+    background: url("fondoinicio.jpg") left 10% bottom 20%/cover no-repeat border-box padding-box, #fdc93f;
     /* background: url("fondoinicio.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%; */
     /*background-repeat: no-repeat;
     background-origin: border-box;
     background-clip: border-box;*/
-    width: 100%;
+   /*background-image:linear-gradient(180deg,#fdc93f, #ee7043, rgb(252, 46, 46) ) ;*/
+   /*background-image: radial-gradient(ellipse farthest-corner at 20% 50%  ,#fdc93f, #ee7043, rgb(252, 46, 46)); */
+   width: 100%;
     height:528px;
-    padding: 10px;
+    padding: 10px; 
     margin-top: 43px;
     /*border: 5px dashed #fdc93f; */
     position: relative;
@@ -115,12 +117,13 @@ text-align: center;
 }
 
 .key-feature__image{
-    background: #ee7043;
+    background: #fdc93f;
     width: 128px;
     height: 128px;
     border: 2px solid rgb(192, 190, 190);
     border-radius: 50%;
     margin:auto;
+    padding: 20px ;
 }
 
 
