--- a/paquetes/packages.css
+++ b/paquetes/packages.css
@@ -3,7 +3,8 @@ main {
 }
 
 .background {
-    background: url(../fondoinicio.jpg);
+    background: url(../fondoinicio.jpg) center/cover;
+    filter: grayscale(10%);
     width: 100%;
     height: 100%;
     position: fixed;
