--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
-
+main{ 
+    padding: 32px;
+}
 
 #descripcion-del-producto { 
-    background: url("fondoinicio.jpg") left 10% bottom 20%/cover no-repeat border-box padding-box, #fdc93f;
+    background: url(../Imagenes/freedom.jpg) left 10% bottom 20%/cover no-repeat border-box padding-box, #fdc93f;
     /* background: url("fondoinicio.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%; */
@@ -15,8 +17,7 @@
     padding: 10px; 
     margin-top: 43px;
     /*border: 5px dashed #fdc93f; */
-    position: relative;
- }
+    position: relative; }
  .section-title {
     color: #175264;
     text-align: center;
@@ -24,6 +25,10 @@
 #descripcion-del-producto h1 {  
      color: white;
      font-family: 'Anton', sans-serif; 
+     position: absolute;
+     bottom: 5%;
+     left: 3%;
+     width: 100%; 
  } 
 
 .plan__list  {
