--- a/paqueteShared.css
+++ b/paqueteShared.css
@@ -5,6 +5,17 @@ body {
     font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
 }
+
+.backdrop {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(117, 115, 115);
+}
+
 .titulo-principal {
     width: 100%;
     position: fixed;
