--- a/Clientes/index.css
+++ b/Clientes/index.css
@@ -1,25 +1,26 @@
 main{ 
-    padding: 32px;
+    padding: 2rem;
 }
 
 .testimonio {
-font-size: 20px;
-margin: 20px 0;
+font-size: 1.2rem;
+margin: 3rem 0;
 }
 
 .testimonio__list{
-    width: 70%;
+    width: 80%;
     margin: auto;
 }
 .testimonio:first-of-type {
-    margin-top: 0;
+    margin-top: 6rem;
 }
 
 .testimonio__image-container {
 width: 65%;
+max-width: 580px;
 display: inline-block;
 vertical-align: middle;
-box-shadow: 3px 3px 3px rgb(189, 189, 189);
+box-shadow: 3px 3px 5px 3px rgb(189, 189, 189);
 }
 
 .testimonio__image {
@@ -29,29 +30,28 @@ vertical-align: top;
 
 .testimonio__info {
     text-align: right;
-    padding: 14px;
+    padding: 0.9rem;
     display: inline-block;
     vertical-align: middle;
     width: 30% ;
 }
 
-#cliente-1-testimonio {
+
+#cliente-2-testimonio {
     text-align: right;
 }
+
 #cliente-2 .testimonio__info {
     text-align: left;
-    padding: 14px;
-    display: inline-block;
-    vertical-align: middle;
-    width: 30%;
 }
 .testimonio__nombre {
-    margin: 3px;
+    margin: 0.2rem;
     color: #175264;
+    font-size: 2rem;
 }
 .testimonio__subtitulo {
     margin: 0;
-    font-size: 18px;
+    font-size: 1.1rem;
     color: rgb(189, 189, 189);
 }
 .testimonio__subtitulo a {
@@ -61,4 +61,7 @@ vertical-align: top;
 .testimonio__subtitulo a:hover,
 .testimonio__subtitulo a:active {
     color:#f49744 ;
+}
+.testimonio__text{
+    margin: 0.2rem;
 }
