--- a/index.css
+++ b/index.css
@@ -12,10 +12,9 @@ main{
     background-clip: border-box;*/
    /*background-image:linear-gradient(180deg,#fdc93f, #ee7043, rgb(252, 46, 46) ) ;*/
    /*background-image: radial-gradient(ellipse farthest-corner at 20% 50%  ,#fdc93f, #ee7043, rgb(252, 46, 46)); */
-   width: 100%;
-    height:528px;
-    padding: 10px; 
-    margin-top: 43px;
+    width: 100vh;
+    height:33vh; 
+    margin-top: 2.75rem;
     /*border: 5px dashed #fdc93f; */
     position: relative; }
  .section-title {
@@ -41,8 +40,8 @@ text-align: center;
  .plan {
      background: #fdc93f;
      text-align: center;
-     padding: 16px;
-     margin: 8px;
+     padding: 1rem;
+     margin: 0.5rem;
      display: inline-block;
      width: 30%;
      vertical-align: middle;
@@ -57,7 +56,7 @@ text-align: center;
 .plan__annotation{
     background: white;
     color: #175264;
-    padding: 8px;
+    padding: 0.5rem;
     box-shadow: 2px 2px 2px 2px rgb(192, 190, 190) ;
     border-radius: 8px;
 }
@@ -86,18 +85,18 @@ text-align: center;
 }
 
 .plan__feature {
-    margin: 8px 0;
+    margin: 0.5rem 0;
 }
 
 #key-features {
     background: #175264;
-    margin-top: 80px;
-    padding: 60px;
+    margin-top: 5rem;
+    padding: 1rem;
 }
 
 #key-features .section-title{
     color: white;
-    margin: 32px;
+    margin: 2rem;
 }
 
 
@@ -118,7 +117,7 @@ text-align: center;
     color: white;
     text-align: center;
     font-weight: bold;
-    font-size: 20 px;
+    font-size: 1.2rem;
 }
 
 .key-feature__image{
@@ -128,7 +127,7 @@ text-align: center;
     border: 2px solid rgb(192, 190, 190);
     border-radius: 50%;
     margin:auto;
-    padding: 20px ;
+    padding: 1.5rem ;
 }
 
 
