--- a/paqueteShared.css
+++ b/paqueteShared.css
@@ -28,6 +28,29 @@ body {
 .titulo-principal > div {
     display: inline-block;
     } 
+
+.toggle-button {
+    width: 3rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: middle;
+}
+
+.toggle-button:focus {
+    outline: none;
+}
+
+.toggle-button__bar {
+    width: 100%;
+    height: 0.2rem;
+    background: black;
+    display: block;
+    margin: 0.6rem 0;
+}
+
  .main-header_brand{
      color: #fdc93f;
      text-decoration: none;
@@ -36,7 +59,9 @@ body {
      height: 1.5rem;
      /*width: 20px;*/
      display: inline-block;
+     vertical-align: middle;
      }
+
 .main-header_brand img {
     height: 100%;
     /*width: 100%;*/
@@ -45,7 +70,7 @@ body {
 .main-nav {
     display: inline-block;
     text-align: right;
-    width: calc(100% - 75px);
+    width: calc(100% - 122px);
     vertical-align: middle;
 }
 .main-nav_items{
@@ -57,7 +82,8 @@ body {
     display: inline-block;
     margin: 0 1rem;
 }  
-.main-nav_item a {
+.main-nav_item a,
+.mobile-nav__item a {
     text-decoration: none;
     font-weight: bold;
     padding: 0.2rem 0;
@@ -69,14 +95,17 @@ body {
     color: white;
     border-bottom: 5px solid white;
 }
-.main-nav_item--cta a{
+.main-nav_item--cta a,
+.mobile-nav__item--cta a {
     color: white;
     padding: 0.5rem 1rem;
     border-radius:8px ;
     background:#f49744;
 }
 .main-nav_item--cta a:hover,
-.main-nav_item--cta a:active{
+.main-nav_item--cta a:active,
+.mobile-nav__item--cta a:hover,
+.mobile-nav__item--cta a:active {
     color: #f49744;
     background: white;
     border: none;
@@ -111,6 +140,34 @@ body {
 }
 
 
+.mobile-nav{
+    display: none;
+    position: fixed;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    background: white;
+    width: 80%;
+    height: 100vh;
+}
+
+.mobile-nav__items{
+    width: 90%;
+    height: 100%;
+    list-style: none;
+    margin: 10% auto;
+    padding: 0;
+    text-align: center;
+}
+
+.mobile-nav__item{
+    margin: 1rem 0;
+}
+
+.mobile-nav__item a {
+    font-size: 1.5rem;
+}
+
 .button {
     color: white;
     font: inherit;
@@ -132,3 +189,8 @@ body {
         outline: none;
     }
     
+
+    .open {
+        display: block !important;
+    }
+
