--- a/Media queries/style.css
+++ b/Media queries/style.css
@@ -14,6 +14,10 @@ body{
     padding: 0;
 }
  
+.body{
+    font-family: Arial, Helvetica, sans-serif ;
+}
+
 .cards{
     background-color: rgb(231, 231, 231);
     background-image: url(../Imagenes/fotografo-paisajes.jpg) ; 
@@ -31,13 +35,16 @@ body{
 .cards-item{
     background-color: rgb(224, 221, 221);
     display: inline-block;
-    width: 90%;
-    height: 10rem;
+    width: 25%;
+    height: 20rem;
     padding: 1rem;
     box-shadow: 0 10px 10px rgb(0, 0, 0, .3);
     box-sizing: border-box;
     margin: 1rem;
-    border-radius: 1rem;
+    border-radius: 5rem;
+}
+.cards-item h2{
+    margin-bottom: 2rem;
 }
 
 .only-xbs{
@@ -59,7 +66,7 @@ body{
     }
 
     .cards-container{
-        max-width: auto;
+        max-width: 120rem;
     }
     .cards-item{
         width: 14%;
@@ -68,3 +75,10 @@ body{
         display: inline-block;
     }  
 } 
+
+@media screen and ( max-widht: 49rem ) {
+    .cards-item{
+        width: 90%;
+        height: 10rem;
+    }    
+}
